--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <!-- Name, HP, type symbol -->
           <div id="top-text-wrapper">
             <span id="pokemon-name">Name</span>
-            <span id="hit-points">HP</span>
+            <span id="hit-points">xxHP</span>
             <span class="pokemon-type">Fire</span>
           </div>
           <!-- Image -->
