adjusted borders, text spacing. added API ability names

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="card-wrapper">
           <!-- Name, HP, type symbol -->
           <div id="top-text-wrapper">
-            <span id="pokemon-name">Name</span>
-            <span id="hit-points">xxHP</span>
-            <span class="pokemon-type">Fire</span>
+            <span class="top-text" id="pokemon-name">Name</span>
+            <span class="top-text" id="hit-points">xxHP</span>
+            <span class="top-text pokemon-type">Fire</span>
           </div>
           <!-- Image -->
           <div class="img-wrapper">
@@ -30,12 +30,12 @@
           <div id="abilities">
             <div class="ability-wrapper" id="ability-1-wrapper">
               <span class="pokemon-type">Type icon</span>
-              <span class="ability-name">Ability name</span>
+              <span class="ability-name" id="ability-1">Ability name</span>
               <span class="ability-dmg">10</span>
             </div>
             <div class="ability-wrapper" id="ability-2-wrapper">
               <span class="pokemon-type">Type icon</span>
-              <span class="ability-name">Ability name</span>
+              <span class="ability-name" id="ability-2">Ability name</span>
               <span class="ability-dmg">10</span>
             </div>
           </div>
