added icon svgs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
           <!-- Abilities -->
           <div id="abilities">
             <div class="ability-wrapper" id="ability-1-wrapper">
-              <span class="pokemon-type">Type icon</span>
+              <span class="pokemon-type"
+                ><img
+                  class="icon bug"
+                  src="./assets/icons/bug.svg"
+                  alt="pokemon icon"
+              /></span>
               <span class="ability-name" id="ability-1">Ability name</span>
               <span class="ability-dmg">10</span>
             </div>
