added dynamic poke icons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
           <div id="top-text-wrapper">
             <span class="top-text" id="pokemon-name">Name</span>
             <span class="top-text" id="hit-points">xxHP</span>
-            <span class="top-text pokemon-type">Fire</span>
+            <span class="top-text pokemon-type"
+              ><img class="icon" src="" alt="" hidden
+            /></span>
           </div>
           <!-- Image -->
           <div class="img-wrapper">
@@ -30,10 +32,7 @@
           <div id="abilities">
             <div class="ability-wrapper" id="ability-1-wrapper">
               <span class="pokemon-type"
-                ><img
-                  class="icon bug"
-                  src="./assets/icons/bug.svg"
-                  alt="pokemon icon"
+                ><img class="icon" src="" alt="" hidden
               /></span>
               <span class="ability-name" id="ability-1">Ability name</span>
               <span class="ability-dmg">10</span>
