added dynamic HP

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div class="card-wrapper">
           <!-- Name, HP, type symbol -->
           <div id="top-text-wrapper">
-            <span class="top-text" id="pokemon-name">Name</span>
-            <span class="top-text" id="hit-points">xxHP</span>
+            <span class="top-text" id="pokemon-name"
+              >Click the button below for a Pokemon!</span
+            >
+            <span class="top-text" id="hit-points"></span>
             <span class="top-text pokemon-type"
               ><img class="icon" src="" alt="" hidden
             /></span>
