added third icon svg

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
               <span class="ability-dmg">10</span>
             </div>
             <div class="ability-wrapper" id="ability-2-wrapper">
-              <span class="pokemon-type">Type icon</span>
+              <span class="pokemon-type"
+                ><img class="icon" src="" alt="" hidden
+              /></span>
               <span class="ability-name" id="ability-2">Ability name</span>
               <span class="ability-dmg">10</span>
             </div>
